--- a/app/src/main/res/layout/layout_fingerprint.xml
+++ b/app/src/main/res/layout/layout_fingerprint.xml
@@ -20,6 +20,7 @@
             android:gravity="center">
 
             <ImageView
+                android:id="@+id/ic_fingerprint"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginBottom="30dp"
@@ -28,8 +29,10 @@
                 android:tint="@android:color/darker_gray"/>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/message"
+                android:layout_width="190dp"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text="@string/access_fingerprint" />
 
         </LinearLayout>
